<resources>
    <string name="app_name">Aplikacja</string>
    <string name="hello_world">0</string>
    <string name="toast_button_text">Toast</string>
    <string name="random_button_text">Random</string>
    <string name="count_button_text">Count</string>
    <string name="next_page_button">Next page</string>
    <string name="previous_page_button">Previous page</string>
    <string name="clicked_d_times">Clicked %d times</string>
    <string name="button_description">Przycisk drugiej aktywności</string>
    <string name="translate">Translate</string>
    <string name="translated_phrase">Translated phrase</string>
    <string name="enter_phrase">Enter phrase</string>
    <string name="select_language">Select language</string>
    <string name="button_to_do_nothing">Button to do nothing</string>
    <string name="translator">Translator</string>


</resources>
