<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/moving_background"
    tools:context=".SecondPage"
    >

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/cosinnego"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/curly">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/memomasters_logo_foreground"
                    android:layout_gravity="center"
                    android:contentDescription="@string/hello_world"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/translator"
                    android:textColor="@android:color/black"
                    android:textSize="48sp"
                    android:textStyle="bold"
                    android:typeface="serif" />

            </LinearLayout>

        <LinearLayout
            android:id="@+id/cosinnego1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/InputLanguageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_language"
                android:layout_weight="1"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:background="@drawable/przyciski"
                android:padding="10dp" />

            <ImageButton
                android:id="@+id/ChangeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_keyboard_double_arrow_right_24"
                android:padding="20dp"
                android:background="?attr/selectableItemBackground"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:contentDescription="@string/button_to_do_nothing" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/OutputLanguageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_language"
                android:layout_weight="1"
                android:background="@drawable/przyciski"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:padding="10dp" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@android:color/transparent"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/InputText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/ramka"
                android:gravity="left"
                android:hint="@string/enter_phrase"
                android:minHeight="250dp"
                android:paddingTop="5dp"
                android:paddingStart="5dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/OutputText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/ramka"
                android:paddingStart="5dp"
                android:hint="@string/translated_phrase"
                android:gravity="start"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:paddingTop="5dp"
                android:layout_marginStart="5dp"
                android:minHeight="250dp"
                android:textSize="18sp" />

            </LinearLayout>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/TranslationButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/translate"
                android:layout_marginTop="10dp"
                android:background="@drawable/przyciski"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:padding="10dp"/>

            <ImageButton
                android:id="@+id/prev_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/circle_button"
                android:contentDescription="@string/button_description"
                android:padding="20dp"
                android:layout_gravity="right"
                android:src="@drawable/sharp_family_home_24"
                />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
